add simple file download, file processing, clone detection